add trade command; add some __doc__s