@@ -1,2 +1,6 @@
+# test command
+#
+# return "text"
+
 def test(self, args = []):
     return "hello world"
