@@ -1,3 +1,5 @@
+# return "now time in seconds"
+
 from time import time as oclock
 
 def time(self, args = []):
