@@ -1,3 +1,5 @@
+# 
+
 def trade(self, args = []):
     """trades place\n\ttrade list $ <page:int>\n\ttrade buy $ <slot_id:str>\n\ttrade sell $ <item:str> $ <count:int> $ <item:str> $ <count:int>"""
     id = self.id
